src/components/Chat/index.module.scss
.wrapper {
  display: flex;
  justify-content: center;
  position: relative;
  height: calc(100vh - 228px);
  margin: 0 auto;
  .generateLink {
    height: fit-content;
    margin: auto auto;
    padding: 12px;
    min-width: 148px;
    justify-content: space-between;
  }
}

.chatInput {
  position: fixed;
  bottom: 20px;
  margin: 0 auto;

  button {
    height: 36px;
  }
}

@media only screen and (max-width: 1023.98px) {
  .chatInput {
    width: calc(100% - 40px);
  }
}

@media only screen and (min-width: 1024px) {
  .chatInput {
    width: calc(100% - 240px);
    left: 220px;
  }
}

